# qt-qr-code

./: .clang-tidy  .editorconfig  CMakeLists.txt  LICENSE  README.md  main.cpp  qt-qr-code.pro
ext/: qrcodegen.c  qrcodegen.h
